--- a/Yeoman/app/views/play.html
+++ b/Yeoman/app/views/play.html
@@ -1,66 +1,71 @@
-<!-- <img src="/images/backgrounds/city.jpg"/> -->
-<!-- <div class="play-container-div"> -->
 
+<!-- Div-ul play-main-div este div-ul principal, continutul sau reprezinta de fapt view-ul
+            care se va inlocui in index.html la accesarea /play.html; -->
 <div class="play-main-div">
 
+    <!-- play-health-div este divul care apare in partea superioara a ecranului in care se desfasoara jocul.
+                Aici se afiseaza "viata" jucatorulu; -->
     <div class="play-health-div">
-        <div id="health"></div>
-        <h1></h1>
+        <!-- In acest header apare intrebarea -->
+        <h1 class="current-question-h1"><span style="font-weight: lighter; color: purple;">~Room {{roomNumber}}~</span><br>{{currentQuestion}}</h1>
     </div>
 
-    <!-- <button type="button" class="btn btn-warning" id="play-me-button" data-ng-click="setProfileVisible()">Me ></button> -->
-    <!-- <button type="button" data-ng-click="setProfileVisible()">blah</button> -->
-    <!-- <button type="button" class="btn btn-warning" id="play-enemies-button">My Enemies</button> -->
+    <!-- div-ul play-middle-parent contine elementele din mijlocul ecranului de joc. Are display: flex;-->
     <div class="play-middle-parent">
+      <!-- div-ul play-middle-parent1 contine elementele din partea stanga a ecranului de joc: butonul 'Me' si div-ul care apare dupa apasarea acestui buton; -->
       <div class="play-middle-parent1" style="display: inline-flex">
-    <button type="button" id="play-me-button" data-ng-click="setProfileVisible()">Me</button>
-    <div class="play-player-profile-div" id="player-profile-id" data-ng-click="setProfileVisible()">
-        <img src="/images/profiles/k1.png" class="play-profile-pic"/>
-          <p class="play-username-p" style="margin-bottom: 0">> Kit Kat</p>
-          <p class="play-profile-text" style="margin-bottom: 0;">This is your game with number: </p>
-          <p class="play-profile-text" style="margin-bottom: 0;">9</p><br>
-          <p class="play-profile-text" style="margin-bottom: 0;">This is the game with number: </p>
-          <p class="play-profile-text" style="margin-bottom: 0;">1789</p>
-    </div>
-  </div>
-    <div class="play-middle-parent2" style="display: inline-flex">
-    <div class="play-current-players-div" id="player-enemies-id" data-ng-click="setEnemiesVisible()">
-      <p style="opacity: 1; font-weight: bold; margin: auto; font-family: 'FreeMono', monospace; font-size: 2vw; color: #da530f;text-decoration: underline;"> Now playing:
-        <ol>
-          <li class="play-current-player">William</p>
-          <li class="play-current-player">Nicole</p>
-          <li class="play-current-player">Kit Kat</p>
-          <li class="play-current-player">Megan</p>
-        </ol>
-    </div>
+        <!-- La apasarea butonului play-me-button apare div-ul play-player-profile-div care afiseaza username-ul si poza de profil a jucatorului si cateva date despre joc -->
+        <button type="button" id="play-me-button" data-ng-click="setProfileVisible()">Me</button>
+        <!-- div-ul play-player-profile-div apare in stanga ecranului la apasarea butonului play-me-button si contine informatii despre jucatorul curent -->
+        <div class="play-player-profile-div" id="player-profile-id" data-ng-click="setProfileVisible()">
+          <!-- poza de profil din /images/profiles  si alte date, sub forma de paragrafe-->
+
+          <img src="/images/profiles/k1.png" class="play-profile-pic" id="my-image-id" alt="Imagine indisponibila"/> <!-- "/images/profiles/k1.png"-->
+
+          <p class="play-username-p" style="margin: 0; padding: 0;">{{name}}</p>
+          <p class="play-profile-text" style="margin: 0; padding: 0;">{{myScore}} points</p>
+          <p class="play-profile-text" style="margin: 0; padding: 0;">This is your game with number: 9</p>
+          <!-- <p class="play-profile-text" style="margin: 0; padding: 0;">9</p> -->
+          <p class="play-profile-text" style="margin: 0; padding: 0;">This is the game with number: 123</p>
+          <!-- <p class="play-profile-text" style="margin: 0; padding: 0;">1789</p> -->
+        </div>
+      </div>
+
+      <!-- <h1 class="timer-h1">Countdown Clock</h1>
+      <div id="clockdiv">
+        <div>
+          <span class="seconds"></span>
+          <div class="smalltext">Time left:</div>
+        </div>
+      </div> -->
+
+      <!-- div-ul play-middle-parent2 contine elementele din partea dreapta a ecranului de joc: butonul 'Enemies' si div-ul care apare dupa apasarea acestui buton; -->
+      <div class="play-middle-parent2" style="display: inline-flex">
+        <!-- div-ul play-current-players-div apare in dreapta ecranului la apasarea butonului play-enemies-button si afiseaza o lista cu inamicii  -->
+        <div class="play-current-enemy-div" id="player-enemy-id" data-ng-click="setEnemiesVisible()">
+          <!-- lista cu inamicii, ordered list -->
+          <img src="/images/profiles/postman.png" class="play-profile-pic" id="enemy-image-id" alt="Imagine indisponibila"/> <!--"/images/profiles/ocelot.jpg"-->
+          <p class="play-username-p" style="margin: 0; padding: 0;"> {{enemyName}}</p>
+          <p class="play-profile-text" style="margin: 0; padding: 0;">{{enemyScore}} points</p>
+          <p class="play-profile-text" style="margin: 0; padding: 0;">This is your game with number: 99</p>
+          <!-- <p class="play-profile-text" style="margin: 0; padding: 0;">99</p> -->
+          <p class="play-profile-text" style="margin: 0; padding: 0;">This is the game with number: 123</p>
+          <!-- <p class="play-profile-text" style="margin: 0; padding: 0;">1789</p> -->
+        </div>
+        <!-- La apasarea butonului play-enemies-button apare div-ul play-current-players-div care afiseaza o lista ordonata cu inamicii din jocul curent -->
         <button type="button" id="play-enemies-button" data-ng-click="setEnemiesVisible()">Enemies</button>
       </div>
-  </div>
-     <div class="play-footer-div">
-        <div id="option1" class="play-answer-column-div" data-ng-click="option(1)">Asta este raspunsul cu numarul 1, este unul destul de lung. Are explicatii:explexplexp lexplvv explexplex  plexplex plexpl e xplexplexp lexplexp lvvexple xp lexplexpl explexple xplexpl explexple xpl v vexpl</div>
-        <div id="option2" class="play-answer-column-div" data-ng-click="option(2)">Asta este raspunsul cu numarul 2, este unul mediu. Are explicatii:explexp lexplex p  lv ve xp lexplex ple xplex vve xpl</div>
-        <div id="option3" class="play-answer-column-div" data-ng-click="option(3)">Asta este raspunsul cu numarul 3, este unul scurt</div>
     </div>
-</div>
 
-<!-- <div class="play-below-game-div">
-<div class="play-player-profile-div">
-    <img src="/images/profiles/k1.png" class="play-profile-pic"/>
-      <p class="play-username-p">> SirPurrALot</p>
-      <p class="play-nr-jocuri-p">This is your game with number: </p>
-      <p class="play-val-nr-jocuri-p">9</p><br>
-      <p class="play-nr-joc-p">This is the game with number: </p>
-      <p class="play-val-nr-joc-p">1789</p>
-</div>
-  <div class="play-current-players-div" style="border: solid;">
-    <p style="margin: auto; font-family: Impact, Charcoal, sans-serif; font-size: 2vw; color: #ff4830;text-decoration: underline;"> Now playing:
-      <ol>
-        <li class="play-current-player">SirPurrALot</p>
-        <li class="play-current-player">Stick</p>
-        <li class="play-current-player">Pic</p>
-        <li class="play-current-player">Poc</p>
-      </ol>
-  </div>
+  <div id="timer-div"></div>
 
-</div> -->
-<!-- </div> -->
+    <!-- Div-ul play-footer-div are rol de footer in ecranul de joc, contine cele trei raspunsuri posibile la intrebar -->
+    <div class="play-footer-div">
+        <div id="option0"></div>
+        <div id="option1" class="play-answer-column-div" data-ng-click="sendMyAnswer(0)">{{answers[0]}}</div>
+        <!-- data-ng-click="option(1)"  2 SI 3-->
+        <div id="option2" class="play-answer-column-div" data-ng-click="sendMyAnswer(1)">{{answers[1]}}</div>
+        <div id="option3" class="play-answer-column-div" data-ng-click="sendMyAnswer(2)">{{answers[2]}}</div>
+    </div>
+    <div class="loader"></div>
+</div>
